--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light row">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light row">
       <div class="col-sm-10">
         <a class="navbar-brand mx-2" href="http://localhost:3000/restaurants"><i class="fa-solid fa-house"></i></a>
         <button class="navbar-toggler mx-2" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,10 +21,16 @@
         </button>
       </div>
       <div class="collapse navbar-collapse col-sm-2" id="navbarSupportedContent">
-        <a class="nav-link" href="http://localhost:3000/restaurants/new">Add a Restaurant</a>
+        <i class="fa-regular fa-plus"></i><a class="nav-link text-dark" href="http://localhost:3000/restaurants/new">Add your restaurant</a>
       </div>
     </nav>
-  <div><%= yield %></div>
-
+    <div class="container">
+      <div>
+        <%= yield %>
+      </div>
+    </div>
+    <div class="card-footer bg-white fixed-bottom">
+      <i class="fa-brands fa-instagram"></i>
+    </div>
   </body>
 </html>
