--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,9 +3,9 @@
 <%# <%= link_to "Add a new restaurant", new_restaurant_path,  class: "btn btn-primary" %> <br><br>
 <ul>
   <% @restaurants.each do |restaurant| %>
-    <li class="row">
-      <div class="col-sm"><h3 class="text-dark"><%= link_to restaurant.name, restaurant_path(restaurant.id) %></h3></div>
-      <div class="col-sm"><i class="fa-regular fa-pen-to-square"></i><%= link_to "Add a review", new_restaurant_review_path(restaurant), class: "btn btn-primary"%></div>
+    <li class="row" >
+      <div class="col-sm"><h5 class="text-dark"><%= link_to restaurant.name, restaurant_path(restaurant.id), class: "text-decoration-none text-dark hover-light" %></h5></div>
+      <div class="col-sm"><%= link_to "", new_restaurant_review_path(restaurant), class: "fa-regular fa-pen-to-square text-dark"%></div>
     </li>
     <% end %>
 </ul>
